# telegram-bot-minimal-template

./: .gitignore  README.md  pyproject.toml  setup.py
src/: Dockerfile  docker-compose.yml  jobs.config  main.py
src/bots/: bot_manager.py  sub_bot.py
src/db/: config.py  storage.py
src/db/model/: base.py
src/inject/: bot_injector.py
src/inject/module/: bot_module.py  repository_module.py  router_module.py  services_subsystem.py  subsystem_manager_module.py
src/install/elastic/: init_indices.sh
src/install/elastic/mappings/: ethu.json
src/install/graphana/provisioning/: BTCUSDT-1722021591173.json  BTCUSDT-1722952338541.json  (+8 more)
src/install/postgres/: postgresql.conf
src/install/shell/: initialize_app.sh  stop_all_containers.sh
src/install/utility/: find_long_lines.py  split_log_file.py
src/logs/config/: logging.dev.ini  logging.ini
src/markup/inline/: time_pickers.py  types.py
src/markup/reply/: main_menu_reply_keyboard.py
src/middleware/: chat_id_middleware.py  moderation_middleware.py  propagation_middleware.py  service_middleware.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/oam/: environment.py  log_config.py
src/routers/: base_router.py  dispatcher.py  gateway_router.py
src/schedule/: periodic_message_scheduler.py
src/service/: telegram_service.py
src/service/elastic/: elastic_service.py
src/service/openai/: openai_api_service.py
src/service/os/: filesystem_service.py
src/subsystem/: database_subsystem.py  elastic_subsystem.py  logger_subsystem.py  scheduler_subsystem.py  slave_bot_subsystem.py  subsystem.py  subsystem_manager.py
(+9 files in other folders)
